# LuxinMediaServer

./: Cargo.toml  README.md  TODO.md  build.py
common_libs/client_lib/: Cargo.toml
common_libs/client_lib/src/: lib.rs
common_libs/comms_lib/: Cargo.toml
common_libs/comms_lib/src/: lib.rs  socket.rs
common_libs/comms_lib/src/socket/: handshake.rs
common_libs/ui_lib/: Cargo.toml  build.rs
common_libs/ui_lib/src/: events.rs  layout.rs  lib.rs  render.rs  util.rs
common_libs/ui_lib/src/render/: shapes.rs
src_client/: main.rs
src_pc_client/: Cargo.toml
src_pc_client/src/: main.rs
src_server/: Cargo.toml  main.rs
src_server/src/: main.rs
