[package]
name = "luxin_media_server"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
comm_lib = { path = "common_libs/comm_lib" }

[[bin]]
name = "luxin_media_server"
path = "src_server/main.rs"

[[bin]]
name = "luxin_media_client"
path = "src_client/main.rs"
