[package]
name = "luxin_media_server"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
comms_lib = { path = "common_libs/comms_lib" }

# Include all the other libraries we will need so that we specify a version in only 1 place
serde = { version = "1.0.101", features = ["derive"] }
bincode = "1.2.0"
sodiumoxide = "0.2.5"

[[bin]]
name = "luxin_media_server"
path = "src_server/main.rs"

[[bin]]
name = "luxin_media_client"
path = "src_client/main.rs"
