[package]
name = "client_lib"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"

comms_lib = { path = "../comms_lib" }
ui_lib = { path = "../ui_lib" }
