[package]
name = "ui_lib"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22.0"

[build-dependencies]
gl_generator = "0.14.0"
